--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
+asgiref==3.8.1
+dj-database-url==2.3.0
 Django==4.2.11
-psycopg2-binary==2.9.9
-pandas==2.2.2
-openpyxl==3.1.2
+django-adminlte3==0.1.6
+et_xmlfile==2.0.0
 gunicorn==21.2.0
-whitenoise==6.6.0
-dj-database-url==2.1.0
+numpy==2.2.3
+openpyxl==3.1.5
+pandas==2.2.3
+psycopg2==2.9.10
+python-dateutil==2.9.0.post0
+pytz==2025.1
+six==1.17.0
+sqlparse==0.5.3
+typing_extensions==4.12.2
+tzdata==2025.1
+whitenoise==6.9.0
